# python-mastery-2025

./: pyproject.toml  todos.json
src/day1/: __main__.py
src/day2/: __main__.py
src/python_mastery/: main.py
