[tool.poetry]
name = "python-mastery-2025"
version = "0.1.0"
description = "Mein 12-Monats-Python-Master-Plan"
authors = ["PBKing65"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Einheitliches Start-Kommando für alle Tage
[tool.poetry.scripts]
start = "day2.__main__:main"    # wird später pro Tag angepasst, ist aber egal